Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13791

Capabilities are not effective

XMLWordPrintable

    • 3
    • 9223372036854775807

      Historically, the capabilities from client requests are dropped if current user is not root, but with permission check moving to MDD (from client and bottom FS), the capabilities should be kept to allow them take effect.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: